feat: new /notes module feat: CreateNote handler
