# docs/swagger.yaml
@@ -24,6 +24,33 @@ definitions:
       user:
         $ref: '#/definitions/models.UserOut'
     type: object
+  models.NoteIn:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
+  models.NoteOut:
+    properties:
+      archived:
+        type: boolean
+      content:
+        type: string
+      created_at:
+        type: string
+      encrypted:
+        type: boolean
+      id:
+        type: integer
+      title:
+        type: string
+      updated_at:
+        type: string
+    type: object
   models.Session:
     properties:
       refresh:
@@ -125,6 +152,42 @@ paths:
       summary: Get current user
       tags:
       - auth
+  /notes:
+    post:
+      consumes:
+      - application/json
+      description: Creates a note for the authenticated user
+      parameters:
+      - description: Note object
+        in: body
+        name: note
+        required: true
+        schema:
+          $ref: '#/definitions/models.NoteIn'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.NoteOut'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new note
+      tags:
+      - notes
   /refresh:
     post:
       consumes:
